<resources>
    <string name="app_name">PetShop</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="application_made_by_patrik_stepanic">Application made by Patrik Stepanic</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="pets">Pets</string>
    <string name="pet_picture">pet_picture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_pet_shop">Welcome to Pet Shop</string>
    <string name="petshopsplashscreen">PetShopSplashScreen</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="breed">Breed</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="safepay">VerySafePay</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="month">Month</string>
    <string name="slash">/</string>
    <string name="year">Year</string>
    <string name="amount_to_pay">Amount to pay:</string>
    <string name="default_notification_channel_id">notification</string>
</resources>