<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/splashIvHeight"
        android:src="@drawable/pet_shop"
        android:contentDescription="@string/petshopsplashscreen"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_pet_shop"
        android:textSize="@dimen/tvSizeBig"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:width="@dimen/button_width"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:width="@dimen/button_width"/>

</LinearLayout>