<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyPetActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/safepay"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/splashTextSize"
                android:textStyle="bold"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="80dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_to_pay"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tvSizeBig"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_on_card"
                        android:layout_marginVertical="@dimen/activity_horizontal_margin"
                        app:hintTextColor="?android:colorPrimaryDark"
                        app:boxStrokeColor="?android:colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNameOnCard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_number"
                        android:layout_marginVertical="@dimen/activity_horizontal_margin"
                        app:hintTextColor="?android:colorPrimaryDark"
                        app:boxStrokeColor="?android:colorPrimaryDark">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/activity_horizontal_margin"
                            android:minWidth="80dp"
                            android:hint="@string/month"
                            app:hintTextColor="?android:colorPrimaryDark"
                            app:boxStrokeColor="?android:colorPrimaryDark">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etExpDateMonth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/slash"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:layout_marginHorizontal="20dp"
                            android:gravity="center"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/activity_horizontal_margin"
                            android:minWidth="80dp"
                            android:hint="@string/year"
                            app:hintTextColor="?android:colorPrimaryDark"
                            app:boxStrokeColor="?android:colorPrimaryDark">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etExpDateYear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="2"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_marginVertical="@dimen/activity_horizontal_margin"
                        style="@style/Widget.MaterialComponents.Button"
                        app:backgroundTint="@color/blue"
                        android:id="@+id/btnBuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:textColor="@color/white"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>